feat: minting status checked

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                   alt="minting icon"
                   width="30px"
                 /><span class="pl-2 mt-4 minting-status"
-                  >Minting Will Be Live Soon!</span
-                >
+                  ></span>
               </p>
             </div>
           </div>
@@ -225,14 +224,14 @@
             <div class="modal-body">
               <div class="mint-modal-inner">
                 <p>
-                  How many Fuzion Punks do you<br />
+                  How many Fuzion CryptoPunks do you
                   want to mint?
                 </p>
                 <div class="position-relative">
                   <input type="number" placeholder="1" class="minting-input" />
                   <a onclick="maxMintPunks()" class="max-mint-btn">MAX</a>
                 </div>
-                <button class="start-minting-btn">START MINTING</button>
+                <button class="start-minting-btn"></button>
               </div>
             </div>
           </div>
@@ -798,8 +797,7 @@
                   alt="minting icon"
                   width="30px"
                 /><span class="pl-2 mt-4 minting-status"
-                  >Minting Will Be Live Soon!</span
-                >
+                  ></span>
               </p>
             </div>
           </div>
