--- a/index.html
+++ b/index.html
@@ -924,9 +924,16 @@
           </div>
         </div>
         <div class="row pt-5">
+          <div class="col-md-12 d-flex justify-content-center">
+            <a href="https://tokens.fuzion.team/" target="_blank">
+              <img src="./img/footer/fuzion-seal-logo.svg" alt="fuzion seal logo" width="170px" class="hover-magnify">
+            </a>
+          </div>
+        </div>
+        <div class="row pt-5">
           <div class="col-md-12">
             <p class="text-center footer-txt">
-              ©2021 FuzionChain. All rights reserved.
+              ©2022 FuzionChain. All rights reserved.
             </p>
           </div>
         </div>
