feat: minting punks displayed

--- a/index.html
+++ b/index.html
@@ -178,18 +178,16 @@
                 data-toggle="modal"
                 data-target="#exampleModalCenter"
                 class="mint-btn"
-                >MINT YOUR NFT</a
-              >
+                >MINT YOUR NFT</a>
             </div>
             <div class="minting-block">
-              <p class="my-2">
-                <img
-                  src="./img/icons/minting-icon.svg"
-                  alt="minting icon"
-                  width="30px"
-                /><span class="pl-2 mt-4 minting-status"
-                  ></span>
-              </p>
+              <div class="media">
+                <img class="mr-1 mt-4" src="./img/icons/minting-icon.svg" alt="Minting icon">
+                <div class="media-body">
+                  <p class="minting-status mb-0 pt-3"></p>
+                  <p>Fuzion CryptoPunks minted: <span class="punksSupply"></span></p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-md-6 d-flex justify-content-center">
@@ -232,6 +230,7 @@
                   <a onclick="maxMintPunks()" class="max-mint-btn">MAX</a>
                 </div>
                 <button class="start-minting-btn"></button>
+                <p class="pt-2 fw-400">Fuzion CryptoPunks Minted: <span class="punksSupply"></span></p>
               </div>
             </div>
           </div>
@@ -791,14 +790,13 @@
           </div>
           <div class="col-md-12 d-flex justify-content-center">
             <div class="minting-block">
-              <p class="my-2">
-                <img
-                  src="./img/icons/minting-icon.svg"
-                  alt="minting icon"
-                  width="30px"
-                /><span class="pl-2 mt-4 minting-status"
-                  ></span>
-              </p>
+              <div class="media">
+                <img class="mr-1 mt-4" src="./img/icons/minting-icon.svg" alt="Minting icon">
+                <div class="media-body">
+                  <p class="minting-status mb-0 pt-3"></p>
+                  <p>Fuzion CryptoPunks minted: <span class="punksSupply"></span></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
