fixing: getAddress error

--- a/profile.html
+++ b/profile.html
@@ -926,7 +926,7 @@
         <div class="row pt-5">
           <div class="col-md-12">
             <p class="text-center footer-txt">
-              ©2021 FuzionChain. All rights reserved.
+              ©<span class="currentYear"></span> FuzionChain. All rights reserved.
             </p>
           </div>
         </div>
