--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
         <div class="row pt-5">
           <div class="col-md-12">
             <p class="text-center footer-txt">
-              ©2022 FuzionChain. All rights reserved.
+              ©<span class="currentYear"></span> FuzionChain. All rights reserved.
             </p>
           </div>
         </div>
