fix: connect wallet issues

--- a/index.html
+++ b/index.html
@@ -178,14 +178,21 @@
                 data-toggle="modal"
                 data-target="#exampleModalCenter"
                 class="mint-btn"
-                >MINT YOUR NFT</a>
+                >MINT YOUR NFT</a
+              >
             </div>
             <div class="minting-block">
               <div class="media">
-                <img class="mr-1 mt-4" src="./img/icons/minting-icon.svg" alt="Minting icon">
+                <img
+                  class="mr-1 mt-4"
+                  src="./img/icons/minting-icon.svg"
+                  alt="Minting icon"
+                />
                 <div class="media-body">
                   <p class="minting-status mb-0 pt-3"></p>
-                  <p>Fuzion CryptoPunks minted: <span class="punksSupply"></span></p>
+                  <p>
+                    Fuzion CryptoPunks minted: <span class="punksSupply"></span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -221,16 +228,15 @@
             </button>
             <div class="modal-body">
               <div class="mint-modal-inner">
-                <p>
-                  How many Fuzion CryptoPunks do you
-                  want to mint?
-                </p>
+                <p>How many Fuzion CryptoPunks do you want to mint?</p>
                 <div class="position-relative">
                   <input type="number" placeholder="1" class="minting-input" />
                   <a onclick="maxMintPunks()" class="max-mint-btn">MAX</a>
                 </div>
                 <button class="start-minting-btn"></button>
-                <p class="pt-2 fw-400">Fuzion CryptoPunks Minted: <span class="punksSupply"></span></p>
+                <p class="pt-2 fw-400">
+                  Fuzion CryptoPunks Minted: <span class="punksSupply"></span>
+                </p>
               </div>
             </div>
           </div>
@@ -296,7 +302,8 @@
                     </p>
                     <ul class="block-content-list">
                       <li>14% to NFT Holders</li>
-                      <li>10% to referrals (if no referral exists then will be
+                      <li>
+                        10% to referrals (if no referral exists then will be
                         split between 5 & 6)
                       </li>
                       <li>4% to PAZ holders</li>
@@ -791,10 +798,16 @@
           <div class="col-md-12 d-flex justify-content-center">
             <div class="minting-block">
               <div class="media">
-                <img class="mr-1 mt-4" src="./img/icons/minting-icon.svg" alt="Minting icon">
+                <img
+                  class="mr-1 mt-4"
+                  src="./img/icons/minting-icon.svg"
+                  alt="Minting icon"
+                />
                 <div class="media-body">
                   <p class="minting-status mb-0 pt-3"></p>
-                  <p>Fuzion CryptoPunks minted: <span class="punksSupply"></span></p>
+                  <p>
+                    Fuzion CryptoPunks minted: <span class="punksSupply"></span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -924,14 +937,20 @@
         <div class="row pt-5">
           <div class="col-md-12 d-flex justify-content-center">
             <a href="https://tokens.fuzion.team/" target="_blank">
-              <img src="./img/footer/fuzion-seal-logo.svg" alt="fuzion seal logo" width="170px" class="hover-magnify">
+              <img
+                src="./img/footer/fuzion-seal-logo.svg"
+                alt="fuzion seal logo"
+                width="170px"
+                class="hover-magnify"
+              />
             </a>
           </div>
         </div>
         <div class="row pt-5">
           <div class="col-md-12">
             <p class="text-center footer-txt">
-              ©<span class="currentYear"></span> FuzionChain. All rights reserved.
+              ©<span class="currentYear"></span> FuzionChain. All rights
+              reserved.
             </p>
           </div>
         </div>
