--- a/profile.html
+++ b/profile.html
@@ -685,7 +685,9 @@
                           <h5 class="mb-0">Total Referral Commissions</h5>
                         </div>
                         <div class="referral-card-body">
-                          <p class="mb-0"><span id="referralCommission"></span></p>
+                          <p class="mb-0">
+                            <span id="referralCommission"></span>
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -703,7 +705,8 @@
                               data-toggle="tooltip"
                               data-original-title="Copy to clipboard"
                             >
-                              Copy</a>
+                              Copy</a
+                            >
                             <input
                               type="text"
                               id="referralLink"
@@ -926,7 +929,8 @@
         <div class="row pt-5">
           <div class="col-md-12">
             <p class="text-center footer-txt">
-              ©<span class="currentYear"></span> FuzionChain. All rights reserved.
+              ©<span class="currentYear"></span> FuzionChain. All rights
+              reserved.
             </p>
           </div>
         </div>
